--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:text="Register"
-        android:textColor="@color/header_textcolor"
+        android:textColor="@color/black"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,12 +34,13 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailContainer"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_marginHorizontal="20dp"
-            app:helperText="@string/required"
-            app:helperTextTextColor="@android:color/holo_red_dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="30dp"
+            app:helperText="@string/required"
+            app:helperTextTextColor="@android:color/holo_red_dark"
+            app:hintTextColor="#020202"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -48,9 +49,9 @@
                 android:id="@+id/emailAddress_EditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:lines="1"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
-                android:hint="@string/email"/>
+                android:lines="1" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -58,30 +59,32 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordContainer"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_marginHorizontal="20dp"
-            app:helperText="@string/required"
-            app:helperTextTextColor="@android:color/holo_red_dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="30dp"
             app:counterEnabled="true"
             app:counterMaxLength="16"
-            app:passwordToggleEnabled="true"
+            app:helperText="@string/required"
+            app:helperTextTextColor="@android:color/holo_red_dark"
+            app:hintTextColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/emailContainer">
+            app:layout_constraintTop_toBottomOf="@id/emailContainer"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_EditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:lines="1"
-                android:maxLength="16"
+                android:hint="@string/password"
                 android:inputType="textPassword"
-                android:hint="@string/password"/>
+                android:lines="1"
+                android:maxLength="16" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/register_button"
             android:layout_width="match_parent"
@@ -89,7 +92,8 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:background="@drawable/button_shape"
-            android:text="Register" />
+            android:text="Register"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/login_TextView"
