--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -52,6 +53,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="#DACACA"
                 android:orientation="vertical">
 
                 <TextView
@@ -71,7 +73,9 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:backgroundTint="#5C60AC"
                     android:stepSize="5"
+
                     android:value="20"
                     android:valueFrom="0"
                     android:valueTo="100"
@@ -91,7 +95,9 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:text="save" />
+            android:background="#5E5151"
+            android:text="save"
+            android:textColor="#000000" />
 
     </LinearLayout>
 
