--- a/app/src/main/res/layout/wishlist_item_layout.xml
+++ b/app/src/main/res/layout/wishlist_item_layout.xml
@@ -52,7 +52,41 @@
                     android:layout_marginTop="40dp"
                     android:gravity="center"
                     android:text="TextView"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/product_brand_wishlist_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="TextView"
                     android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/product_price_wishlist_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="TextView"
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/product_website_wishlist_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="?selectableItemBackgroundBorderless"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="@string/Website"
+                    android:textColor="@color/black"
+                    android:textColorHighlight="@color/black"
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -66,7 +100,8 @@
                         android:id="@+id/minus_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/imageview_boarder"
+                        android:background="?selectableItemBackgroundBorderless"
+
                         android:backgroundTint="@color/background"
                         app:srcCompat="@drawable/ic_baseline_remove_24" />
 
@@ -84,7 +119,8 @@
                         android:id="@+id/plus_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@color/background"
+                        android:background="?selectableItemBackgroundBorderless"
+
                         android:backgroundTint="@color/background"
                         app:srcCompat="@drawable/ic_baseline_add_24" />
 
