--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -79,9 +79,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginBottom="5dp"
-            android:text="Product Description"
-            android:textColor="@color/black" />
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:text="Product Information"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -135,7 +137,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:layout_weight="1"
                         android:text="@string/price" />
 
                     <TextView
@@ -143,18 +144,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
-                        android:layout_weight="1"
+                        android:layout_marginRight="20dp"
                         android:text="TextView"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/product_website_link"
@@ -173,8 +166,14 @@
                         android:backgroundTint="#03FFFFFF"
                         android:src="@drawable/ic_baseline_link_24"
                         android:text="TextView" />
-
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:orientation="horizontal"/>
 
             </LinearLayout>
         </ScrollView>
