--- a/app/src/main/res/layout/fragment_shopping_bag.xml
+++ b/app/src/main/res/layout/fragment_shopping_bag.xml
@@ -28,6 +28,7 @@
         android:background="@drawable/button_shape"
         android:text="@string/place_order"
         android:textColor="@color/black"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
