--- a/app/src/main/res/layout/wishlist_item_layout.xml
+++ b/app/src/main/res/layout/wishlist_item_layout.xml
@@ -23,12 +23,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:orientation="horizontal">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/favorites_imageview"
-                android:layout_width="102dp"
-                android:layout_height="100dp"
+                android:layout_width="150dp"
+                android:layout_height="200dp"
                 android:layout_margin="15dp"
                 android:layout_marginTop="5dp"
                 android:fadingEdge="vertical"
@@ -40,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="45dp"
                 android:gravity="center"
                 android:orientation="vertical">
@@ -80,61 +82,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="?selectableItemBackgroundBorderless"
                     android:layout_marginTop="10dp"
+                    android:background="?selectableItemBackgroundBorderless"
                     android:gravity="center"
                     android:text="@string/Website"
                     android:textColor="@color/black"
                     android:textColorHighlight="@color/black"
                     android:textSize="16sp" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                <ImageButton
+                    android:id="@+id/delete_button"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginTop="20dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/minus_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?selectableItemBackgroundBorderless"
-
-                        android:backgroundTint="@color/background"
-                        app:srcCompat="@drawable/ic_baseline_remove_24" />
-
-                    <TextView
-                        android:id="@+id/amount_textview"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:gravity="center"
-                        android:text="1"
-                        android:textColor="@color/black" />
-
-                    <ImageButton
-                        android:id="@+id/plus_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="?selectableItemBackgroundBorderless"
-
-                        android:backgroundTint="@color/background"
-                        app:srcCompat="@drawable/ic_baseline_add_24" />
-
-                    <ImageButton
-                        android:id="@+id/delete_button"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_marginLeft="40dp"
-                        android:background="@drawable/imageview_boarder"
-                        android:backgroundTint="@color/background"
-                        app:srcCompat="@drawable/ic_baseline_delete_24" />
-
-
-                </LinearLayout>
+                    android:background="@drawable/imageview_boarder"
+                    android:backgroundTint="@color/background"
+                    app:srcCompat="@drawable/ic_baseline_delete_24" />
 
             </LinearLayout>
 
